--- a/listing/templates/search_page.html
+++ b/listing/templates/search_page.html
@@ -4,7 +4,7 @@
         <div class="card-header">
           <b><i class="fa fa-search" aria-hidden="true"></i> Search</b></div>
         <div class="card-body">
-        <form action="" method="post" class="listing" style="padding: 0px">
+        <form action="" method="get" class="listing" style="padding: 0px">
           {% csrf_token %}
           <div class="row">
              <div class="col-xl-5 col-sm-6 mb-3"><input type="text" name="search_key" placeholder="Search.."></div>
