--- a/listing/templates/widget_detail.html
+++ b/listing/templates/widget_detail.html
@@ -1,63 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="card mb-3">
-        <div class="card-body">
-        	<div class="row">
-        		<div class="col-xl-8 col-sm-6 mb-3 wid-details">
-        			<h2>{{ result.widget1 }}</h2>
-        				<div class="row">
-        					<div class="col-xl-2">
-        						<b>US$ {{ result.widget2 }}</b>
-        					</div>
-        					<div class="col-xl-2">
-        						<i class="fa fa-map-marker text-warning" aria-hidden="true"></i> {% for m in result.widget8.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}
-        					</div>
-        					<div class="col-xl-3">
-        						<i class="fa fa-crosshairs text-danger" aria-hidden="true"></i> {% for m in result.widget8.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}
-        					</div>
-        		<div class="col-xl-12 col-sm-6 mb-3">		
-				<label>Description 1 </label>
-				<p>{{ result.widget5 }}</p>
-				<label>Description 2 </label>
-				<p>   {{ result.widget6 }}</p>
-				<label>Location</label>
-				<p>    {{ result.widget7 }}</p>
-			</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-3">
-					<label>Description 3</label>
-					<p>    {{ result.widget5 }}</p>
-				</div>
-				<div class="col-xl-3">
-				<label>Description 4 </label>   
-				<p>{{ result.widget11 }}</p>
-				</div>
-				<div class="col-xl-3">
-				<label>Description 5 </label>
-				<p>   {{ result.widget10 }}</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-12">
-				<label>Description 6  </label>
-				<p>  {{ result.widget11 }}</p>
-			</div>
-			</div>
-			<div class="card mb-3">
-		        <div class="card-header">
-		          <b><i class="fa fa-th-large" aria-hidden="true"></i> WIDGET METRICS</b></div>
-		        <div class="card-body">
-				<h4><b>Description 1</b>    {{ result.widget5 }}</h4>
-				<h4><b>Description 2 </b>   {{ result.widget6 }}</h4>
-				<h4><b>Description 3  </b>  {{ result.widget5 }}</h4>
-				<h4><b>Description 4 </b>   {{ result.widget11 }}</h4>
-			</div>
-		</div>
-        		</div>
-        	
+	{% load static %}
+<div class="col-xl-7 col-sm-6 mb-3">
+  <div class="text-dark bg-white o-hidden h-100">
+    <div class="wid-cards-details">
+      
+         <div class="wid-details-logo pull-right">
+            <img src="{% static '/listing/images/wid-logo.png' %}" >
+          </div>
+     <div class="wid-details">
+      <h2>{{ result.company_description }}</h2><a href="#" id="img-clk" style="background-color: black">Click to Engage</a>
+      <h5>{{ result.valuation }}</h5>
+      <span><i class="fa fa-fw fa-map-marker"></i> {{ result.geography }}, {% for m in result.country.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
+     
+      <div class="wid-specs">
+      	{% for m in result.sub_sector.all %} <a href="#">{{ m }} </a>{% endfor %}
+        <label>Yield : {% for m in result.yield_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
+        <label>Investment Type: {% for m in result.investment_offered.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
+        <label>Series/Stage:{% for m in result.series_stage.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
+        <label>Class: {% for m in result.class_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
         </div>
-		</div>
-	</div>
+        
+         <p>{{ result.company_description }}</p>
+    </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
