--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -89,7 +89,7 @@ span.nav-item
 .listing p
 {
   float: left;
-  width: calc(50% - 40px);
+  /*width: calc(50% - 40px); */
   min-height: 73px;
   margin-right: 20px;
 }
@@ -404,7 +404,7 @@ span.nav-item
 .listing p
 {
   float: left;
-  /*width: 100%;*/
+  width: 100%;
   margin-bottom: 5px;
 }
 .listing label
@@ -415,6 +415,9 @@ span.nav-item
       white-space: nowrap;
 }
 .listing input[type="text"], .listing select, .listing input[type="number"], .listing textarea
+.listing select {
+ height: 36px;
+}
 {
     display: block;
     width: 100%;
