--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -17,7 +17,7 @@
       <span>{{ i.geography }}, {% for m in i.country.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
       <p>{{ i.company_description }}</p>
       <div class="wid-specs">
-        <label>Yield : {% for m in i.yield_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
+        <label>Yield : {{ i.yield_select }} </label>
         <label>Investment Type: {% for m in i.investment_offered.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
         <label>Series/Stage:{% for m in i.series_stage.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
         <label>Class: {% for m in i.class_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
