--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -1,6 +1,7 @@
 {% load static %}
 <div class="col-xl-4 col-sm-6 mb-3">
   <div class="card text-dark bg-white o-hidden h-100">
+    <a href="/opportunity-detail/{{ i.id }}" class="gotoUrl"></a>
     <div class="wid-cards">
       
         <div class="wid-bg" style="background-image: url('{% static '/listing/images/wid-bg.png' %}');">
@@ -23,7 +24,10 @@
         <label>Class: {% for m in i.class_select.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</label>
         </div>
         {% for m in i.sub_sector.all %} <a href="#">{{ m }} </a>{% endfor %}
+
     </div>
+
     </div>
+  
   </div>
 </div>
