--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -393,7 +393,7 @@ span.nav-item
 .wid-specs
 {
   float: left;
-  width: 45%;
+  width: 100%;
   margin-bottom: 10px;
   margin-right: 5%;
 }
@@ -402,6 +402,10 @@ span.nav-item
   float: left;
   width: 100%;
   margin-top: 15px;
+}
+.widget-specs .wid-specs
+{
+    width:45%!important;
 }
 .wid-specs label
 {
