Links for Fund seeking and Opportunities.

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,14 +34,14 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="New">
-          <a class="nav-link" href="#">
-            <i class="fa fa-fw"><img src="{% static '/listing/images/opprtunity.png' %}""></i>
+          <a class="nav-link" href="/opportunity/">
+            <i class="fa fa-fw"><img src="{% static '/listing/images/opprtunity.png' %}"></i>
             <span class="nav-link-text">Opportunities</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Matches">
-          <a class="nav-link" href="#">
-            <i class="fa fa-fw"><img src="{% static '/listing/images/fund-seeking.png' %}""></i>
+          <a class="nav-link" href="/fund-seeking/">
+            <i class="fa fa-fw"><img src="{% static '/listing/images/fund-seeking.png' %}"></i>
             <span class="nav-link-text">Fund Seeking</span>
           </a>
         </li>
@@ -57,13 +57,13 @@
         </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw"><img src="{% static '/listing/images/search.png' %}""></i>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/search.png' %}"></i>
             <span class="nav-link-text">Search</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
-            <i class="fa fa-fw"><img src="{% static '/listing/images/user.png' %}""></i>
+            <i class="fa fa-fw"><img src="{% static '/listing/images/user.png' %}"></i>
             <span class="nav-link-text">User Name</span>
           </a>
         </li>
