--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -5,6 +5,7 @@
 
       <!-- Icon Cards-->
     <div class="row">
+      {% if dashboard %}
        <h1 class="col-md-12 heading-h1">Refine</h1>
        <div class="col-md-12 refines">
          <button>Total ticket size available</button>
@@ -24,9 +25,16 @@
       </div>
       
     </div>
+      {% endif %}
+
 
         	<div class="row">
-            <h1 class="col-md-12 heading-h1">Latest Matched Opportunities</h1>
+            {% if opportunity or dashboard %}
+            <h1 class="col-md-12 heading-h1">Latest Opportunities</h1>
+            {% endif %}
+            {% if mandate %}
+            <h1 class="col-md-12 heading-h1">Latest Mandates</h1>
+            {% endif %}
             {% for i in result %}
             {% include "widget.html" %}
             {% endfor %}
