Changes M1 & M2 - 01 Field name changes Removed fund seeking page Count of matched opportunities Widget size widened Sub section of upload removed Upload tags added on forms Decimal place reduced to 2 2020 added to financial table Select all in Geography & Sector - (Still have bug)

--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -397,6 +397,34 @@ span.nav-item
   margin-bottom: 10px;
   margin-right: 5%;
 }
+.listing p button.multiselect
+{
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  width: 100%!important;
+  text-align: left;
+  outline: none;
+}
+.listing p .dropdown-toggle::after
+{
+  position: absolute;
+  right: 10px;
+  top:18px;
+}
+.listing p .btn-group
+{
+  width: 100%!important;
+}
+.listing p .btn-group input[type="radio"]
+{
+  display: none;
+}
+.listing p .multiselect-container
+{
+  width: 100%;
+  padding: 10px;
+}
 .widget-specs
 {
   float: left;
