--- a/listing/templates/financial_table.html
+++ b/listing/templates/financial_table.html
@@ -12,6 +12,7 @@
     <th data-value="2017A">2017A </th>
     <th data-value="2018E">2018E </th>
     <th data-value="2019E">2019E </th>
+    <th data-value="2019E">2020E </th>
   </tr>
   <tr>
     <td>Revenue</td>
@@ -20,6 +21,7 @@
     <td><input type="number" step="any" min="0" name="Revenue_2017A" ></td>
     <td><input type="number" step="any" min="0" name="Revenue_2018E" ></td>
     <td><input type="number" step="any" min="0" name="Revenue_2019E" ></td>
+    <td><input type="number" step="any" min="0" name="Revenue_2020E" ></td>
   </tr>
   <tr>
     <td>Costs</td>
@@ -28,6 +30,7 @@
     <td><input type="number" step="any" min="0" name="Costs_2017A" ></td>
     <td><input type="number" step="any" min="0" name="Costs_2018E" ></td>
     <td><input type="number" step="any" min="0" name="Costs_2019E" ></td>
+    <td><input type="number" step="any" min="0" name="Costs_2020E" ></td>
   </tr>
     <tr>
     <td>EBITDA</td>
@@ -36,14 +39,16 @@
     <td><input type="number" step="any" min="0" name="EBITDA_2017A" ></td>
     <td><input type="number" step="any" min="0" name="EBITDA_2018E" ></td>
     <td><input type="number" step="any" min="0" name="EBITDA_2019E" ></td>
+    <td><input type="number" step="any" min="0" name="EBITDA_2020E" ></td>
   </tr>
     <tr>
     <td>CAPEX</td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2015A"  ></td>
+    <td><input type="number" step="any" min="0" name="CAPEX_2015A" ></td>
     <td><input type="number" step="any" min="0" name="CAPEX_2016A" ></td>
     <td><input type="number" step="any" min="0" name="CAPEX_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2018E"  ></td>
+    <td><input type="number" step="any" min="0" name="CAPEX_2018E" ></td>
     <td><input type="number" step="any" min="0" name="CAPEX_2019E" ></td>
+    <td><input type="number" step="any" min="0" name="CAPEX_2020E" ></td>
   </tr>
     <tr>
     <td>Net Profit</td>
@@ -52,6 +57,7 @@
     <td><input type="number" step="any" min="0" name="Net_Profit_2017A" ></td>
     <td><input type="number" step="any" min="0" name="Net_Profit_2018E" ></td>
     <td><input type="number" step="any" min="0" name="Net_Profit_2019E" ></td>
+    <td><input type="number" step="any" min="0" name="Net_Profit_2020E" ></td>
   </tr>
 </table>
 <br>
