--- a/templates/base.html
+++ b/templates/base.html
@@ -29,31 +29,31 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="/">
+          <a class="nav-link" href="">
             <span class="nav-link-text">Dashboard</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="New">
-          <a class="nav-link" href="/opportunity/">
+          <a class="nav-link" href="/">
             <i class="fa fa-fw"><img src="{% static '/listing/images/opprtunity.png' %}"></i>
             <span class="nav-link-text">Opportunities</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Matches">
-          <a class="nav-link" href="/fund-seeking/">
+          <a class="nav-link" href="/opportunity-upload/">
             <i class="fa fa-fw"><img src="{% static '/listing/images/fund-seeking.png' %}"></i>
             <span class="nav-link-text">Fund Seeking</span>
           </a>
         </li>
         <li class="nav-item accordion" id="accordion" data-toggle="tooltip" data-placement="right" title="Link">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/mandate-upload/">
             <i class="fa fa-fw"><img src="{% static '/listing/images/download.png' %}"></i>
-            <span class="nav-link-text">Upload</span>
+            <span class="nav-link-text">Investors</span>
           </a>
-            <ul class="submenu">
-              <li><a href="/opportunity-upload/">Opportunity</a></li>
-              <li><a href="/mandate-upload/">Mandate</a></li>
-            </ul>
+            <!--<ul class="submenu">-->
+              <!--<li><a href="/opportunity-upload/">Opportunity</a></li>-->
+              <!--<li><a href="/mandate-upload/">Mandate</a></li>-->
+            <!--</ul>-->
         </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
           <a class="nav-link" href="#">
